  as it is included in Finagle's user's guide.

6.x
-----

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: Remove `c.t.f.client.StackClient.Role.loadBalancer`, which
    was unused and duplicated by `c.t.f.loadbalancer.LoadBalancerFactory.role`.

  * finagle-core: `c.t.f.Namer.orElse` was removed; composing Namers
    may be accomplished by constructing an appropriate Dtab.

  * finagle-http: Remove `c.t.f.http.CheckRequestFilter` along with
    `c.t.f.http.CheckHttpRequestFilter`. The functionality has been
    added to `c.t.f.http.codec.HttpServerDispatcher`. In addition,
    the codecError in `c.t.f.http.BadHttpRequest` has been replaced
    with the exception thrown by the HttpServerCodec.

  * finagle-mux: `c.t.f.mux.lease.exp.WindowedByteCounter` no longer
    calls `Thread.start()` in its constructor. This should be now be
    done by the caller.

  * finagle-mux: The experimental session API is discontinued.

  * finagle-mux: Introduce new Request and Response types for mux services.
    The new mux request includes a `destination` path so that, which corresponds
    to the `destination` field in Tdispatch requests. Furthermore, these new
    types expose `c.t.io.Buf` instead of Netty's ChannelBuffers.

  * finagle-thrift,finagle-thriftmux: `c.t.f.Thrift.Client`, `c.t.f.Thrift.Server`,
    `c.t.f.ThriftMux.Client` and `c.t.f.ThriftMux.Server` have their
    `TProtocolFactory` configured via a `c.t.f.thrift.param.ProtocolFactory`
    `Stack.Param`.

  * finagle-thriftmux: `c.t.f.ThriftMux.Client` now has its `ClientId`
    configured via a `c.t.f.thrift.param.ClientId` `Stack.Param`.


  * Traces (``com.twitter.finagle.tracing.Trace``) lose their local-state mutating methods:
    ``Trace.clear``, ``Trace.pushId``, ``Trace.setId``, ``Trace.setTerminalId``, ``Trace.pushTracer``, 
    ``Trace.pushTracerAndSetNextId``, 
    ``Trace.state_=``, and ``Trace.unwind``. 
    Let-bound versions of these are introduced in their stead.