@@ -14,6 +14,9 @@ Breaking API Changes
   * finagle-core: `c.t.f.Namer.orElse` was removed; composing Namers
     may be accomplished by constructing an appropriate Dtab.
 
+  * finagle-core: removed experimental `enum` / `expand` from
+    `c.t.f.Namer` and `alt` / `union` from `c.t.f.Dtab`.
+
   * finagle-http: Remove `c.t.f.http.CheckRequestFilter` along with
     `c.t.f.http.CheckHttpRequestFilter`. The functionality has been
     added to `c.t.f.http.codec.HttpServerDispatcher`. In addition,
